--- a/songbook.tex
+++ b/songbook.tex
@@ -476,6 +476,43 @@ zelenej mám semafor.
 
 \end{poem}
 
+\begin{poem}{Colorado}{Kabát}
+
+\settowidth{\versewidth}{Víno na kuráž a k ránu dvě hodinky spánku,}
+
+Táta vždycky říkal: Hochu žádný strachy\\*
+jseš cowboy, v Coloradu můžeš krávy pást\\*
+Já radši utratil jsem psa a všechny prachy\\*
+do srdce Evropy já vodjel v klidu krást.
+
+Narvaný kapsy prsteny, řetězy zlatý\\*
+tam kolem krku místní indiáni maj\\*
+a ty co nemakaj, tak jsou nejvíc bohatý\\*
+musim si pohnout, dokavaď tam rozdávaj.
+
+Ref.:\\*
+Z Billa na Nováka změnim si svý jméno\\*
+a až tu malou zemi celou rozkradem\\*
+\tab (rozkradem)\\*
+tak se vrátím ve svý rodný Colorado\\*
+a o tý zlatý žíle řeknu doma všem.
+
+Tam kradou všichni, co blízko vokolo bydlej\\*
+šerif se na ně jenom hezky usmívá\\*
+kdyby se nesmál, tak ho okamžitě zmydlej\\*
+házej mu kosti za to, že se nedívá.
+
+Místo krav tam, nelžu vám, prej pasou holky\\*
+a když jim nezaplatíš, vyrazej ti dech\\*
+ale s IQ to tam nebude tak horký\\*
+místo na koních tam jezděj v medvědech.
+
+Ref.
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Dej mi víc své lásky}{Olympic}
 
 \settowidth{\versewidth}{Vymyslel jsem spoustu nápadu, aúú,}
