insert Blues Folsomský věznice

--- a/songbook.tex
+++ b/songbook.tex
@@ -439,6 +439,32 @@ tak kopni do tý bedny...
 
 \end{poem}
 
+\begin{poem}{Blues Folsomské věznice}{Greenhorns}
+
+\settowidth{\versewidth}{pravdu měla máma, radila:"Nechoď s tou holkou!",}
+
+Můj děda bejval blázen, texaskej ahasver,\\*
+a na půdě nám po něm zůstal ošoupanej kvér,\\*
+ten kvér obdivovali všichni kámoši z okolí\\*
+a máma mi říkala: "Nehraj si s tou pistolí!"
+
+Jenže i já byl blázen, tak zralej pro malér,\\*
+a ze zdi jsem sundával tenhleten dědečkův kvér,\\*
+pak s kapsou vyboulenou chtěl jsem bejt chlap all right\\*
+a s holkou vykutálenou hrál jsem si na Bonnie and Clyde.
+
+Ale udělat banku, to není žádnej žert,\\*
+sotva jsem do ní vlítnul, hned zas vylít' jsem jak čert,\\*
+místo jako kočka já utíkám jak slon,\\*
+takže za chvíli mě veze policejní anton.
+
+Teď okno mřížovaný mi říká, že je šlus,\\*
+proto tu ve věznici zpívám tohle Folsom Blues.\\*
+pravdu měla máma, radila:"Nechoď s tou holkou!",\\*
+a taky mi říkala:"Nehraj si s tou pistolkou!" 
+
+\end{poem}
+
 \begin{poem}{Blues hvízdavého vlaku}{Greenhorns}
 
 \settowidth{\versewidth}{za pět minut má vyjet můj vlak,}
@@ -478,7 +504,7 @@ zelenej mám semafor.
 
 \begin{poem}{Colorado}{Kabát}
 
-\settowidth{\versewidth}{Víno na kuráž a k ránu dvě hodinky spánku,}
+\settowidth{\versewidth}{Já radši utratil jsem psa a všechny prachy}
 
 Táta vždycky říkal: Hochu žádný strachy\\*
 jseš cowboy, v Coloradu můžeš krávy pást\\*
