--- a/songbook.tex
+++ b/songbook.tex
@@ -439,6 +439,38 @@ tak kopni do tý bedny...
 
 \end{poem}
 
+\begin{poem}{Bláznova ukolébavka}{Jan Nedvěd}
+
+\settowidth{\versewidth}{Máš má ovečko dávno spát, dnes máme půlnoc fakt temnou.}
+
+Máš má ovečko dávno spát, i píseň ptáků končí.\\*
+Kvůli nám přestal vítr vát, jen můra zírá zvenčí.\\*
+Já znám její zášť, tak vyhledej skrýš,\\*
+zas má bílej plášť a v okně je mříž.
+
+Máš má ovečko dávno spát\\*
+a můžeš hřát, ty mě můžeš hřát.\\*
+Vždyť přijdou se ptát, zítra zas přijdou se ptát,\\*
+jestli ty v mých představách už mizíš.
+
+Máš má ovečko dávno spát, dnes máme půlnoc\\*
+\tab temnou.\\*
+Ráno budou nám bláznů lát, že ráda snídáš se mnou.\\*
+Proč měl bych jim lhát, že jsem tady sám,\\*
+když Tebe mám rád, když Tebe tu mám.
+
+Máš má ovečko dávno spát\\*
+a můžeš hřát, ty mě můžeš hřát.\\*
+Vždyť přijdou se ptát, zítra zas přijdou se ptát,\\*
+jestli ty v mých představách už mizíš.
+
+Máš má ovečko dávno spát\\*
+a můžeš hřát, ty mě můžeš hřát.\\*
+Vždyť přijdou se ptát, zítra zas přijdou se ptát,\\*
+jestli ty v mých představách už mizíš...
+
+\end{poem}
+
 \begin{poem}{Blues Folsomské věznice}{Greenhorns}
 
 \settowidth{\versewidth}{pravdu měla máma, radila:"Nechoď s tou holkou!",}
