insert Franky Dlouhan

--- a/songbook.tex
+++ b/songbook.tex
@@ -609,6 +609,40 @@ já chci jen pohladit tvé vlásky, aúú
 
 \end{poem}
 
+\begin{poem}{Franky Dlouhán}{Brontosauři}
+
+\settowidth{\versewidth}{kdo s ním chvilku byl, tak dlouho se pak smál.}
+
+Kolik je smutného, když mraky černé jdou\\*
+lidem nad hlavou, smutnou dálavou,\\*
+já slyšel příběh, který velkou pravdu měl,\\*
+za čas odletěl, každý zapomněl.
+
+Ref.:\\*
+Měl kapsu prázdnou Franky Dlouhán,\\*
+po státech toulal se jen sám\\*
+a že byl veselej, tak každej měl ho rád.\\*
+Tam ruce k dílu mlčky přiloží\\*
+a zase jede dál a každej,\\*
+kdo s ním chvilku byl, tak dlouho se pak smál.
+
+Tam, kde byl pláč,\\*
+tam Frankey hezkou píseň měl,\\*
+slzy neměl rád, chtěl se jenom smát,\\*
+a když pak večer ranče tiše usínaj,\\*
+Frankův zpěv jde dál, nocí s písní dál.
+
+Ref.
+
+Tak Frankyho vám jednou našli, přestal žít,\\*
+jeho srdce spí, tiše smutně spí,\\*
+bůhví a za co tenhle smíšek konec měl,\\*
+farář píseň pěl, umíráček zněl.
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Grónská písnička}{Jaromír Nohavica}
 
 \settowidth{\versewidth}{neboť medvěd jim předvádí spoustu fíglů.}
