insert Jesse James

--- a/songbook.tex
+++ b/songbook.tex
@@ -850,6 +850,54 @@ to bych rád.:/
 
 \end{poem}
 
+\begin{poem}{Jesse James}{Greenhorns}
+
+\settowidth{\versewidth}{Běželi běželi bez uzdy a sedla}
+
+Jesse James chlapík byl,\\*
+hodně lidí vodpravil, \\*
+vlaky přepadával rád,\\*
+boháčům uměl brát,\\*
+chudákùm dával zas,\\*
+přál bych vám abyste ho mohli znát.
+
+Jó, Jesse ženu svou\\*
+tady nechal ubohou\\*
+a tři děcka říkám vám,\\*
+ale tenhle přítel hadí\\*
+ten vám Jesse zradí,\\*
+já vím tenkrát v noci prásk ho sám.
+
+Jednou vám byla noc,\\*
+měsíc tenkrát svítil moc,\\*
+když tu vláček zůstal stát,\\*
+kdekdo ví, že ten vlak\\*
+přepad James kabrňák,\\*
+čistě sám se svým bráchou akorát.
+
+Jó, Jesse ženu svou\\*
+tady nechal ubohou\\*
+a tři děcka říkám vám,\\*
+ale tenhle přítel hadí\\*
+ten vám Jesse zradí,\\*
+já vím tenkrát v noci prásk ho sám.
+
+Jedenkrát Jesse James\\*
+sedí doma za stolem\\*
+a svým dětem vypráví.\\*
+Robert Ford v nočních tmách\\*
+připlíží se jako had,\\*
+a on vám Jesse Jamese odpraví.
+
+Jó, Jesse ženu svou\\*
+tady nechal ubohou\\*
+a tři děcka říkám vám,\\*
+ale tenhle přítel hadí\\*
+ten vám Jesse zradí,\\*
+já vím tenkrát v noci prásk ho sám.
+
+\end{poem}
+
 \begin{poem}{Jižní kříž}{Jan Nedvěd}
 
 \settowidth{\versewidth}{světem protloukal ses, jak ten život pádí,}
@@ -2180,13 +2228,15 @@ Oh why, oh why can't I?
 \incipit{Love is a burnin' thing}\\*
 And it makes a firery ring\\*
 Bound by wild desire\\*
-I fell into a ring of fire
+I fell into a ring of fire.
 
 I fell into a burnin' ring of fire\\*
 I went down, down, down\\*
 And the flames went higher\\*
 And it burns, burns, burns\\*
-The ring of fire, the ring of fire
+The ring of fire, the ring of fire.
+
+
 
 \end{poem}
 
