insert Ring of Fire

--- a/songbook.tex
+++ b/songbook.tex
@@ -2230,13 +2230,29 @@ And it makes a firery ring\\*
 Bound by wild desire\\*
 I fell into a ring of fire.
 
-I fell into a burnin' ring of fire\\*
+/:I fell into a burnin' ring of fire\\*
 I went down, down, down\\*
 And the flames went higher\\*
 And it burns, burns, burns\\*
-The ring of fire, the ring of fire.
+The ring of fire, the ring of fire.:/
 
+The taste of love is sweet,\\*
+when hearts like ours meet.\\*
+I fell for you like a child,\\*
+oh, but the fire went wild.
 
+/:I fell into a burnin' ring of fire\\*
+I went down, down, down\\*
+And the flames went higher\\*
+And it burns, burns, burns\\*
+The ring of fire, the ring of fire.:/
+
+And it burns, burns, burns.\\*
+The ring of fire,\\*
+the ring of fire,\\*
+the ring of fire,\\*
+the ring of fire,\\*
+the ring of fire.
 
 \end{poem}
 
