insert Zatracenej život

--- a/songbook.tex
+++ b/songbook.tex
@@ -636,7 +636,7 @@ Ref.
 
 Tak Frankyho vám jednou našli, přestal žít,\\*
 jeho srdce spí, tiše smutně spí,\\*
-bůhví a za co tenhle smíšek konec měl,\\*
+bůhví jak a za co tenhle smíšek konec měl,\\*
 farář píseň pěl, umíráček zněl.
 
 Ref.
@@ -1773,6 +1773,58 @@ strojvůdce Mike, Výhybka Joe a brzdař Kid.
 
 Ten vlak se ke mně řítí tmou,\\*
 tak ahoj Kide, Miku, ahoj Joe...
+
+\end{poem}
+
+\begin{poem}{Zatracenej život}{Greenhorns}
+
+\settowidth{\versewidth}{než jsem jí stačil řict, že je hezká,}
+
+To bylo v Dakotě po vejplatě,\\*
+whisky jsem tam pašoval,\\*
+a že jsem byl sám jako kůl v plotě,\\*
+s holkou jsem tam špásoval.
+
+Šel jsem s ní nocí, jak vede stezka,\\*
+okolo Červených skal,\\*
+než jsem jí stačil řict, že je hezká,\\*
+zpěněnej býk se k nám hnal.
+
+Jupí, čerte, jdi radši dál,\\*
+pak jsem ho za rohy vzal,\\*
+udělal přemet a jako tur řval,\\*
+do dáli upaloval.
+
+To bylo v Dawsonu tam v saloonu\\*
+a já jsem zase přebral,\\*
+všechny svý prachy jsem měl v talónu,\\*
+na život jsem nadával.
+
+Zatracenej život, čert by to spral,\\*
+do nebe jsem se rouhal,\\*
+než jsem se u baru vzpamatoval,\\*
+Belzebub vedle mě stál.
+
+Jupí, čerte, jdi radši dál,\\*
+pak jsem ho za rohy vzal,\\*
+udělal přemet a jako tur řval,\\*
+do dáli upaloval.
+
+Jó, rychle oplácí tenhleten svět,\\*
+než bys napočítal pět,\\*
+Ďáblovým kaňónem musel jsem jet,\\*
+když jsem se vracel nazpět.
+
+Jak se tak kolíbám, uzdu v pěsti,\\*
+schylovalo se k dešti,\\*
+Belzebub s partou stál vprostřed cesty,\\*
+zavětřil jsem neštěstí.
+
+Povídá:\\*
+Jupí, čerte, jdi radši dál,\\*
+potom mě za nohy vzal,\\*
+udělal jsem přemet, jako tur řval,\\*
+do dáli jsem upaloval.
 
 \end{poem}
 
