--- a/songbook.tex
+++ b/songbook.tex
@@ -1776,6 +1776,39 @@ tak ahoj Kide, Miku, ahoj Joe...
 
 \end{poem}
 
+\begin{poem}{Zajíci}{Jaromír Nohavica}
+
+\settowidth{\versewidth}{než jsem jí stačil řict, že je hezká,}
+
+Podzimní bílá mlha válí se na mechu,\\*
+myslivci vstali už ráno,\\*
+zajíci zalezli a nechce se jim z pelechu,\\*
+neboť se chtějí dožít Vánoc.
+
+Ref.:\\*
+Vzduchem zní famfára,\\*
+tram-ta-rá ra-ra-ra,\\*
+po poli kráčejí střelci,\\*
+já se svou kytarou,\\*
+zpívám písničku prastarou\\*
+o tom že malí budou velcí.
+
+Zajíci naposledy potřásli si tlapkama\\*
+a potom oblékli dresy,\\*
+začíná specielní slalom mezi brokama,\\*
+na trati pole-louky-lesy.
+
+Ref.
+
+Už volá vrchní zajíc Pravda vítězí!\\*
+nohy jsou naše hlavní zbraně,\\*
+až to tu skončí, sraz je v sedm večer na mezi\\*
+a teď zajíci hurá na ně!
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Zatracenej život}{Greenhorns}
 
 \settowidth{\versewidth}{než jsem jí stačil řict, že je hezká,}
@@ -1790,6 +1823,7 @@ okolo Červených skal,\\*
 než jsem jí stačil řict, že je hezká,\\*
 zpěněnej býk se k nám hnal.
 
+Povídám:\\*
 Jupí, čerte, jdi radši dál,\\*
 pak jsem ho za rohy vzal,\\*
 udělal přemet a jako tur řval,\\*
@@ -1805,6 +1839,7 @@ do nebe jsem se rouhal,\\*
 než jsem se u baru vzpamatoval,\\*
 Belzebub vedle mě stál.
 
+Povídám:\\*
 Jupí, čerte, jdi radši dál,\\*
 pak jsem ho za rohy vzal,\\*
 udělal přemet a jako tur řval,\\*
