insert Zítra ráno v pět

--- a/songbook.tex
+++ b/songbook.tex
@@ -1778,7 +1778,7 @@ tak ahoj Kide, Miku, ahoj Joe...
 
 \begin{poem}{Zajíci}{Jaromír Nohavica}
 
-\settowidth{\versewidth}{než jsem jí stačil řict, že je hezká,}
+\settowidth{\versewidth}{až to tu skončí, sraz je v sedm večer na mezi}
 
 Podzimní bílá mlha válí se na mechu,\\*
 myslivci vstali už ráno,\\*
@@ -1804,6 +1804,39 @@ Už volá vrchní zajíc Pravda vítězí!\\*
 nohy jsou naše hlavní zbraně,\\*
 až to tu skončí, sraz je v sedm večer na mezi\\*
 a teď zajíci hurá na ně!
+
+Ref.
+
+\end{poem}
+
+\begin{poem}{Zatanči}{Jaromír Nohavica}
+
+\settowidth{\versewidth}{ať tvůj šat má milá ať tvůj šat na zemi skončí}
+
+Zatanči má milá zatanči pro mé oči,\\*
+zatanči a vetkni nůž do mých zad,\\*
+ať tvůj šat má milá ať tvůj šat na zemi skončí,\\*
+ať tvůj šat má milá rázem je sňat.
+
+Ref.:\\*
+Zatanči jako se okolo ohně tančí,\\*
+zatanči jako na vodě loď,\\*
+zatanči jako to slunce mezi pomeranči,\\*
+zatanči a pak ke mně pojď.
+
+Polož dlaň má milá polož dlaň na má prsa,\\*
+polož dlaň nestoudně na moji hruď,\\*
+obejmi má milá obejmi moje bedra,\\*
+obejmi je pevně a mojí buď.
+
+Ref.
+
+Nový den než začne má milá nežli začne,\\*
+nový den než začne nasyť můj hlad,\\*
+zatanči má milá pro moje oči lačné,\\*
+zatanči a já budu ti hrát.
+
+Ref.
 
 Ref.
 
@@ -1860,6 +1893,60 @@ Jupí, čerte, jdi radši dál,\\*
 potom mě za nohy vzal,\\*
 udělal jsem přemet, jako tur řval,\\*
 do dáli jsem upaloval.
+
+\end{poem}
+
+\begin{poem}{Zítra ráno v pět}{Jaromír Nohavica}
+
+\settowidth{\versewidth}{že mně se nechce do nebes,}
+
+Až mě zítra ráno v pět\\*
+ke zdi postaví,\\*
+ještě si naposled\\*
+dám vodku na zdraví,\\*
+z očí pásku strhnu si,\\*
+to abych viděl na nebe,\\*
+a pak vzpomenu si\\*
+lásko na tebe.\\*
+A pak vzpomenu si\\*
+na tebe.
+
+Až zítra ráno v pět\\*
+přijde ke mně kněz,\\*
+řeknu mu že se splet,\\*
+že mně se nechce do nebes,\\*
+že žil jsem jak jsem žil\\*
+a stejně tak i dožiju,\\*
+a co jsem si nadrobil\\*
+to si i vypiju.\\*
+A co jsem si nadrobil\\*
+si i vypiju.
+
+\vfill\eject
+
+Až zítra ráno v pět\\*
+poručík řekne pal,\\*
+škoda bude těch let,\\*
+kdy jsem tě nelíbal,\\*
+ještě slunci zamávám\\*
+a potom líto přijde mi,\\*
+že tě lásko nechávám\\*
+samotnou tady na zemi.\\*
+Že tě lásko nechávám\\*
+na zemi.
+
+Až zítra ráno v pět\\*
+prádlo půjdeš prát\\*
+a seno obracet\\*
+já u  zdi budu stát,\\*
+tak přilož na oheň\\*
+a smutek v sobě skryj,\\*
+prosím nezapomeň,\\*
+nezapomeň a žij.\\*
+Ná-na ná-na ná-na ná\\*
+ná-na ná-na ná,\\*
+na mě nezapomeň\\*
+a žij.
 
 \end{poem}
 
