insert Když mě brali za vojáka

--- a/songbook.tex
+++ b/songbook.tex
@@ -928,6 +928,55 @@ se smečkou vlků čekal na jaro,\\*
 jak stejská se, až po zádech jde mráz.
 \end{poem}
 
+\begin{poem}{Když mě brali za vojáka}{Jaromír Nohavica}
+
+\settowidth{\versewidth}{láskou hlubokou jak tůň}
+
+Když mě brali za vojáka,\\*
+stříhali mě dohola,\\*
+vypadal jsem jako blbec,\\*
+jak ti všichni dokola-la-la-la,\\*
+jak ti všichni dokola.
+
+Zavřeli mě do kasáren,\\*
+začali mě učiti,\\*
+jak mám správný voják býti,\\*
+a svou zemi chrániti-ti-ti-ti,\\*
+a svou zemi chrániti.
+
+Na pokoji po večerce,\\*
+ke zdi jsem se přitulil,\\*
+vzpomněl jsem si na svou milou,\\*
+krásně jsem si zabulil-lil-lil-lil,\\*
+krásně jsem si zabulil.
+
+Když přijela po půl roce,\\*
+měl jsem zrovna zápal plic,\\*
+po chodbě furt někdo chodil,\\*
+tak nebylo z toho nic-nic-nic-nic,\\*
+tak nebylo z toho nic.
+
+Neplačte vy oči móje,\\*
+ona za to nemohla, protože\\*
+mladá holka lásku potřebuje,\\*
+tak si k lásce pomohla-la-la-la,\\*
+tak si k lásce pomohla.
+
+Major nosí velkou hvězdu,\\*
+před branou ho potkala,\\*
+řek jí že má zrovna volný kvartýr,\\*
+tak se sbalit nechala-la-la-la,\\*
+tak se sbalit nechala.
+
+Co je komu do vojáka,\\*
+když ho holka zradila,\\*
+nashledanou pane Fráňo Šrámku,\\*
+písnička už skončila-la-la-la,\\*
+jakpak se vám líbila-la-la-la,\\*
+no nic moc extra nebyla.
+
+\end{poem}
+
 \begin{poem}{Když se zamiluje kůň}{Zdeněk Svěrák, Jaroslav Uhlíř}
 
 \settowidth{\versewidth}{láskou hlubokou jak tůň}
