--- a/songbook.tex
+++ b/songbook.tex
@@ -930,7 +930,7 @@ jak stejská se, až po zádech jde mráz.
 
 \begin{poem}{Když mě brali za vojáka}{Jaromír Nohavica}
 
-\settowidth{\versewidth}{láskou hlubokou jak tůň}
+\settowidth{\versewidth}{krásně jsem si zabulil-lil-lil-lil,}
 
 Když mě brali za vojáka,\\*
 stříhali mě dohola,\\*
@@ -1093,6 +1093,42 @@ O vodě, o trávě, o lese,\\*
 o smrti, se kterou smířit nejde se,\\*
 o lásce, o zradě, o světě,\\*
 bude to písnička o nás a kometě...
+
+\end{poem}
+
+\begin{poem}{Kozel}{Jaromír Nohavica}
+
+\settowidth{\versewidth}{a o všech lidech, co kdy žili na téhle planetě.}
+
+/:Byl jeden pán,:/\\*
+/:ten kozla měl,:/\\*
+/:velice si:/\\*
+/:s ním rozuměl.:/
+
+/:Měl ho moc rád,:/\\*
+/:opravdu moc.:/\\*
+/:Hladil mu fous:/\\*
+/:na dobrou noc.:/
+
+/:Jednoho dne:/\\*
+/:se kozel splet',:/\\*
+/:rudé tričko:/\\*
+/:pánovi sněd'.:/
+
+/:Když to pán zřel,:/\\*
+/:zařval jejé.:/\\*
+/:Svázal kozla:/\\*
+/:na koleje.:/
+
+/:Zapískal vlak,:/\\*
+/:kozel se lek'.:/\\*
+/:To je má smrt,:/\\*
+/:mečel mek mek.:/
+
+/:Jak tak mečel,:/\\*
+/:vykašlal pak:/\\*
+/:rudé tričko,:/\\*
+/:čímž stopnul vlak.:/
 
 \end{poem}
 
