insert Milenci v texaskách

--- a/songbook.tex
+++ b/songbook.tex
@@ -1405,6 +1405,44 @@ svítí měsíc
 
 \end{poem}
 
+\begin{poem}{Milenci v texaskách}{Josef Zíma, Karel Štědrý}
+
+\settowidth{\versewidth}{Tak jeden mladík s jednou slečnou}
+
+Chodili spolu z čisté lásky\\*
+a sedmnáct jim bylo let\\*
+a do té lásky bez nadsázky\\*
+se vešel celý širý svět.
+
+Ten svět v nich ale viděl pásky\\*
+a jak by mohl nevidět,\\*
+vždyť horovali pro texasky\\*
+a sedmnáct jim bylo let.
+
+A v jedné zvláště slabé chvíli,\\*
+za noci silných úkladů,\\*
+ti dva se spolu oženili\\*
+bez požehnání úřadů.
+
+Ať vám to je, či není milé,\\*
+měla ho ráda, měl ji rád.\\*
+Odpusťte dívce provinilé,\\*
+jestli vám o to bude stát.
+
+Ať vám to je, či není milé,\\*
+měla ho ráda, měl ji rád\\*
+a bylo by moc pošetilé\\*
+pro život hledat jízdní řád.
+
+Tak jeden mladík s jednou slečnou\\*
+se spolu octli na trati.\\*
+Kéž dojedou až na konečnou,\\*
+kéž na trati se neztratí,\\*
+kéž na trati se neztratí,\\*
+kéž na trati se neztratí.
+
+\end{poem}
+
 \begin{poem}{Obluda}{Hop Trop}
 
 \settowidth{\versewidth}{křik' plavčík na stožáru, a hlásek se mu třás'}
