--- a/songbook.tex
+++ b/songbook.tex
@@ -1443,6 +1443,44 @@ kéž na trati se neztratí.
 
 \end{poem}
 
+\begin{poem}{Montgomery}{Mirek Skunk Jaroš}
+
+\settowidth{\versewidth}{déšť mu slepil vlasy jako jíl.}
+
+Déšť ti, holka, smáčel vlasy,\\*
+z tvých očí zbyl prázdný kruh.\\*
+Kde je zbytek tvojí krásy,\\*
+to ví dneska snad jenom Bůh.
+
+Ref.:\\*
+Z celé Jižní eskadrony\\*
+nezbyl ani jeden muž.\\*
+V Montgomery bijou zvony,\\*
+déšť ti smejvá ze rtů růž.
+
+Tam na kopci v prachu cesty\\*
+leží i tvůj generál.\\*
+V ruce šátek od nevěsty,\\*
+ale ruka leží dál.
+
+Ref.
+
+Tvář má zšedivělou strachem,\\*
+zbylo v ní pár těžkých chvil.\\*
+Proužek krve stéká prachem,\\*
+déšť mu slepil vlasy jako jíl.
+
+Ref.
+
+Déšť ti šeptá jeho jméno,\\*
+šeptá ho i listoví.\\*
+Lásku měl rád víc než život,\\*
+to ti nikdy nepoví.
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Obluda}{Hop Trop}
 
 \settowidth{\versewidth}{křik' plavčík na stožáru, a hlásek se mu třás'}
