insert Hoja hoj

--- a/songbook.tex
+++ b/songbook.tex
@@ -736,6 +736,38 @@ pam padadadam padadadádam
 
 \end{poem}
 
+\begin{poem}{Hoja hoj}{Karel Svoboda}
+
+\settowidth{\versewidth}{zvol si nejlepší ze všech řemesel,}
+
+Chceš-li na světe býti převesel,\\*
+zvol si nejlepší ze všech řemesel,\\*
+chceš-li okouzlit dívku nevinnou,\\*
+staň se vojákem staň se hrdinou.
+
+Ref.:\\*
+Hoja hoj, hoja hoj,\\*
+v králi máme zastání,\\*
+hoja, hoj, hoja hoj,\\*
+bůh nás zachrání,\\*
+hoja hoj, hoja hoj,\\*
+hmoždíře a palcáty,\\*
+hoja hoj, hoja hoj,\\*
+holky vokatý!
+
+Rány na buben máš-li ve vínku,\\*
+nesmíš zaváhat ani vteřinku,\\*
+sláva až přilbu tvojí pozlatí,\\*
+stal ses mužem tím co se neztratí.
+
+Ref.
+
+Ref.
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Hvězdář}{UDG}
 
 \settowidth{\versewidth}{v bělostných šatech pro nemocné,}
