--- a/songbook.tex
+++ b/songbook.tex
@@ -764,8 +764,6 @@ Ref.
 
 Ref.
 
-Ref.
-
 \end{poem}
 
 \begin{poem}{Hvězdář}{UDG}
@@ -1717,6 +1715,37 @@ než měli poru\\*
 -chů -chu -chu -chu -chu\\*
 -chu -chu -chu -chů -chu\\*
 -chu -chu -chu -chu.
+
+\end{poem}
+
+\begin{poem}{Proklínám}{Janek Ledecký}
+
+\settowidth{\versewidth}{Sám s hlavou skloněnou, všechny lásky budou zdání.}
+
+Prázdnej byt je jako past, kde růže uvadnou.\\*
+Potisící čtu Tvůj dopis na rozloučenou.\\*
+Píšeš, že odcházíš, když den se s nocí střídá,\\*
+vodu z vína udělá, kdo dobře nehlídá.
+
+Píšeš:\\*
+Proklínám, ty Tvoje ústa proklínám,\\*
+Tvoje oči ledový, v srdci jen sníh.\\*
+Sám a sám, ať nikdy úsvit nespatříš,\\*
+na ústa mříž, oči oslepnou, ať do smrti seš sám.
+
+Tvoje oči jsou jak stín a tvář den když se stmívá,\\*
+stromy rostou čím dál výš a pak je čeká pád.\\*
+Sám s hlavou skloněnou, všechny lásky budou zdání.\\*
+Potisící čtu Tvůj dopis na rozloučenou.
+
+Píšeš:\\*
+Proklínám, ty Tvoje ústa proklínám,\\*
+Tvoje oči ledový, v srdci jen sníh.\\*
+Sám a sám, ať nikdy úsvit nespatříš,\\*
+na ústa mříž, oči oslepnou, ať do smrti seš sám.
+
+Sám a sám, ať nikdy úsvit nespatříš,\\*
+na ústa mříž, oči oslepnou, ať do smrti seš sám.
 
 \end{poem}
 
