--- a/songbook.tex
+++ b/songbook.tex
@@ -1749,6 +1749,54 @@ na ústa mříž, oči oslepnou, ať do smrti seš sám.
 
 \end{poem}
 
+\begin{poem}{Proměny}{Čechomor}
+
+\settowidth{\versewidth}{A ty přece budeš má, lebo mi tě pán Bůh dá.}
+
+Darmo sa ty trápíš, můj milý synečku,\\*
+nenosím já tebe, nenosím v srdéčku.\\*
+Přece tvoja nebudu, ani jednu hodinu.
+
+Copak sobě myslíš, má milá panenko,\\*
+vždyť ty jsi to moje rozmilé srdénko.\\*
+A ty musíš býti má, lebo mi tě pán Bůh dá.
+
+A já sa udělám malú veveričkú,\\*
+a uskočím tobě z dubu na jedličku.\\*
+Přece tvoja nebudu, ani jednu hodinu.
+
+A já chovám doma takú sekerečku,\\*
+ona mi podetne důbek i jedličku.\\*
+A ty musíš býti má, lebo mi tě pán Bůh dá.
+
+A já sa udělám tu malú rybičkú,\\*
+a já ti uplynu pryč po Dunajíčku.\\*
+Přece tvoja nebudu, ani jednu hodinu.
+
+A já chovám doma takovú udičku,\\*
+co na ni ulovím kdejakú rybičku.\\*
+A ty přece budeš má, lebo mi tě pán Bůh dá.
+
+A já sa udělám tú velikú vranú\\*
+a já ti uletím na uherskú stranu.\\*
+Přece tvoja nebudu, ani jednu hodinu.
+
+A já chovám doma starodávnú kušu,\\*
+co ona vystřelí všeckým vranám dušu.\\*
+A ty musíš býti má, lebo mi tě pán Bůh dá.
+
+A já sa udělám hvězdičkú na nebi\\*
+a já budu lidem svítiti na zemi.\\*
+Přece tvoja nebudu, ani jednu hodinu.
+
+A sú u nás doma takoví hvězdáři,\\*
+co vypočítajú hvězdičky na nebi.\\*
+A ty musíš býti má, lebo mi tě pán Bůh dá.
+
+A ty musíš býti má, lebo mi tě pán Bůh dá.
+
+\end{poem}
+
 \begin{poem}{Špinavej Titanik}{Malomocnost prázdnoty}
 
 \settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
