insert Severní vítr

--- a/songbook.tex
+++ b/songbook.tex
@@ -1797,6 +1797,50 @@ A ty musíš býti má, lebo mi tě pán Bůh dá.
 
 \end{poem}
 
+\begin{poem}{Severní vítr}{Zdeněk Svěrák, Jaroslav Uhlíř}
+
+\settowidth{\versewidth}{svůj hrob, a že stloukám si kříž.}
+
+Jdu s děravou patou,\\*
+mám horečku zlatou,\\*
+jsem chudý, jsem sláb, nemocen.\\*
+Hlava mě pálí\\*
+a v modravé dáli\\*
+se leskne a třpytí můj sen.
+
+Kraj pod sněhem mlčí,\\*
+tam stopy jsou vlčí,\\*
+tam zbytečně budeš mi psát.\\*
+Sám v dřevěné boudě\\*
+sen o zlaté hroudě\\*
+já nechám si tisíckrát zdát.
+
+Severní vítr je krutý,\\*
+počítej lásko má s tím.\\*
+K nohám ti dám zlaté pruty\\*
+nebo se vůbec nevrátím.
+
+Tak zarůstám vousem\\*
+a vlci už jdou sem,\\*
+už slyším je výt blíž a blíž.\\*
+Už mají mou stopu,\\*
+už větří, že kopu\\*
+svůj hrob, a že stloukám si kříž.
+
+Zde leží ten blázen,\\*
+chtěl dům a chtěl bazén\\*
+a opustil tvou krásnou tvář.\\*
+Má plechovej hrnek\\*
+a pár zlatejch zrnek\\*
+a nad hrobem polární zář.
+
+Severní vítr je krutý,\\*
+počítej lásko má s tím.\\*
+K nohám ti dám zlaté pruty\\*
+nebo se vůbec nevrátím.
+
+\end{poem}
+
 \begin{poem}{Špinavej Titanik}{Malomocnost prázdnoty}
 
 \settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
