--- a/songbook.tex
+++ b/songbook.tex
@@ -1841,6 +1841,42 @@ nebo se vůbec nevrátím.
 
 \end{poem}
 
+\begin{poem}{Svařák}{Harlej}
+
+\settowidth{\versewidth}{svůj hrob, a že stloukám si kříž.}
+
+/:Když jsem sám doma,:/\\*
+/:poslouchám Vávra,:/\\*
+/:starýho vola,:/\\*
+/:pořád dokola.:/
+
+/:Chce to mít nápad,:/\\*
+/:a ne pořád chrápat,:/\\*
+/:já dostal jsem nápad,:/\\*
+/:udělat mejdan.:/
+
+Mám rád svařené víno červené,\\*
+já mám rád rád svařák.\\*
+Mám rád svařené víno červené,\\*
+já mám rád rád svařák.
+
+/:Se známou partou,:/\\*
+/:domluva krátká,:/\\*
+/:zejtra v šest hodin,:/\\*
+/:vstup jedna lampa.:/
+
+/:Začíná mejdan,:/\\*
+/:na 200 procent,:/\\*
+/:my plníme plány,:/\\*
+/:rostou nám blány.:/
+
+Mám rád svařené víno červené,\\*
+já mám rád rád svařák.\\*
+Mám rád svařené víno červené,\\*
+já mám rád rád svařák.
+
+\end{poem}
+
 \begin{poem}{Špinavej Titanik}{Malomocnost prázdnoty}
 
 \settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
