--- a/songbook.tex
+++ b/songbook.tex
@@ -2036,6 +2036,38 @@ Ref.
 
 \end{poem}
 
+\begin{poem}{Titanic}{Tři sestry}
+
+\settowidth{\versewidth}{Slavný muž, jenž měl z pekla štěstí}
+
+Z výšin Velkých Karpat\\*
+Přes moře na západ.\\*
+Bída v Americe má cíl.\\*
+Ráno maj už lístek.\\*
+Titanic je místem,\\*
+Kde teď budou týdnů pár žít.
+
+Jen Ján zpitej zas jak Dán.\\*
+Prošvihnul odjezd parníku snů.\\*
+Máma ta pláče že sám\\*
+Odsoudil se skrz pitku\\*
+Ke smutnému zítřku svých dnů.
+
+Přístavem se toulá\\*
+A lístek svůj žmoulá.\\*
+Protáhnul ten mejdan pár dní.\\*
+Náhle z novin zpráva,\\*
+Že ledovec jak kráva\\*
+Potopil ten slavný parník.
+
+Pán Ján zpitej zas jak Dá.\\*
+Slavný muž, jenž měl z pekla štěstí.\\*
+Vrátí se zpátky jen sám.\\*
+Odchází z Karpat bída.\\*
+On hodlá dál žít na scestí.
+
+\end{poem}
+
 \begin{poem}{Udavač z Těšína}{Jaroslav Hutka}
 
 \settowidth{\versewidth}{vtíravým hlasem svým bude nám zpívat}
