insert Hvězda na vrbě

--- a/songbook.tex
+++ b/songbook.tex
@@ -766,6 +766,42 @@ Ref.
 
 \end{poem}
 
+\begin{poem}{Hvězda na vrbě}{Karel Mareš, Jiří Štaidl}
+
+\settowidth{\versewidth}{Viděli jsme jednou v lukách}
+
+Kdo se večer hájem vrací,\\*
+Ten ať klopí zraky,\\*
+Ať je nikdy neobrací\\*
+K vrbě křivolaký.
+
+Jinak jeho oči zjistí,\\*
+I když se to nezdá,\\*
+Že na vrbě kromě listí\\*
+Visí malá hvězda.
+
+Viděli jsme jednou v lukách\\*
+Plakat na tý vrbě kluka\\*
+Který pevně věřil tomu\\*
+Že ji sundá z toho stromu.
+
+Kdo o hvězdy jeví zájem\\*
+Zem když večer chladne\\*
+Ať jde klidně přesto hájem\\*
+Hvězda někdy spadne.
+
+Ať se pro ní rosou brodí\\*
+A pak vrbu najde si\\*
+A pro ty co kolem chodí\\*
+Na tu větev zavěsí.
+
+Viděli jsme jednou v lukách\\*
+Plakat na tý vrbě kluka\\*
+Který pevně věřil tomu\\*
+Že ji sundá z toho stromu.
+
+\end{poem}
+
 \begin{poem}{Hvězdář}{UDG}
 
 \settowidth{\versewidth}{v bělostných šatech pro nemocné,}
