insert Hvězda na vrbě

--- a/songbook.tex
+++ b/songbook.tex
@@ -534,6 +534,72 @@ zelenej mám semafor.
 
 \end{poem}
 
+\begin{poem}{Bude mi lehká zem}{Petr Hapka, Jana Kirschner}
+
+\settowidth{\versewidth}{jen ty smíš kázat mi nad hrobem.}
+
+Mám pěknou sirku v zubech,\\*
+krempu do čela\\*
+a bota zpuchřelá\\*
+mi vrásky nedělá.
+
+Jen tou svou sirkou škrtni,\\*
+at se ohřejem!\\*
+Až prikryje nás zem,\\*
+tak už si neškrtnem.
+
+Má lásko,\\*
+jen ty smíš kázat mi nad hrobem!\\*
+Má zem pak bude lehká...\\*
+Bude mi lehká zem.
+
+Mám tu svá vysvědčení,\\*
+pohlednici z Brém\\*
+a proti pihám krém...\\*
+Co s nimi? Čert je vem!
+
+Ten čert sám brzo zjistí,\\*
+že má v podpaží\\*
+moc težké závaží...\\*
+A někde v poli rozpaží!
+
+Má lásko,\\*
+jen ty smíš kázat mi nad hrobem.\\*
+Má zem pak bude lehká...\\*
+Bude mi lehká zem.
+
+Tak dobré ráno, milé\\*
+myši v kostelích.\\*
+Tak ať vám chutná klih\\*
+všech křídel andělských.
+
+A dobrý večer, sovo,\\*
+která myši jíš.\\*
+Ptáš se, zdali\\*
+i my vzali\\*
+zavčas pali?\\*
+Jářku, to si piš.
+
+Má lásko,\\*
+jen ty smíš kázat mi nad hrobem.\\*
+Má zem pak bude lehká...\\*
+Bude mi lehká zem.
+
+Už nemám ani klobouk,\\*
+pluje povětřím.\\*
+Jak zvony hledá Řím...\\*
+Či sebe sama? Co já vím?\\*
+Jen to, že co mám tebe,\\*
+už tíži necítím...
+
+Má\\*
+lásko, jen ty smíš kázat mi nad hrobem.\\*
+Má zem pak bude lehká.\\*
+Bude mi lehká zem.\\*
+Bude mi lehká zem.
+
+\end{poem}
+
 \begin{poem}{Colorado}{Kabát}
 
 \settowidth{\versewidth}{Já radši utratil jsem psa a všechny prachy}
