--- a/songbook.tex
+++ b/songbook.tex
@@ -2770,6 +2770,48 @@ early in the morning!
 
 \end{poem}
 
+\begin{poem}{Folsom Prison Blues}{Johnny Cash}
+
+\settowidth{\versewidth}{Well if they'd free me from this prison,}
+
+I hear the train a comin'\\*
+it's rolling round the bend\\*
+and I ain't seen the sunshine\\*
+since I don't know when,\\*
+I'm stuck in Folsom prison,\\*
+and time keeps draggin' on\\*
+but that train keeps a rollin'\\*
+on down to San Anton..
+
+When I was just a baby\\*
+my mama told me. Son,\\*
+always be a good boy,\\*
+don't ever play with guns.\\*
+But I shot a man in Reno\\*
+just to watch him die\\*
+when I hear that whistle blowin'\\*
+I hang my head and cry..
+
+I bet there's rich folks\\*
+eating in a fancy dining car\\*
+they're probably drinkin' coffee\\*
+and smoking big cigars.\\*
+Well I know I had it coming,\\*
+I know I can't be free\\*
+but those people keep a movin'\\*
+and that's what tortures me...
+
+Well if they'd free me from this prison,\\*
+if that railroad train was mine\\*
+I bet I'd move just a little\\*
+further down the line\\*
+far from Folsom prison,\\*
+that's where I want to stay\\*
+and I'd let that lonesome whistle\\*
+blow my blues away.....
+
+\end{poem}
+
 \begin{poem}{Hallelujah}{Leonard Cohen}
 
 \settowidth{\versewidth}{Put him in the bed with the captains daughter,}
@@ -2822,6 +2864,37 @@ Hallelujah, Hallelujah.
 
 Hallelujah, Hallelujah,\\*
 Hallelujah, Hallelujah.
+
+\end{poem}
+
+\begin{poem}{Homophobia}{Chumbawamba}
+
+\settowidth{\versewidth}{You can't love who you want to love in times like these}
+
+Up behind the bus-stop in the toilets off the street,\\*
+there are traces of a killing on the floor beneath your feet,\\*
+mixed in with the piss and beer are bloodstains on the floor,\\*
+from the boy who got his head kicked in a night or two before.
+
+Ref.:\\*
+/:Homophobia, the worst disease,\\*
+you can't love who you want to love in times like these.:/
+
+In the pubs, clubs and burger bars, breeding pens for pigs,\\*
+alcohol, testosterone and ignorance and fists,\\*
+packs of hunting animals roam across the town,\\*
+they find an easy victim and they punch him to the~ground.
+
+Ref.
+
+The siren of the ambulance, the deadpan of the cops,\\*
+chalk to mark the outline where the boy first dropped\\*
+beware the holy trinity: Church and state and law,\\*
+for every death, the virus gets more deadly than \mbox{before}.
+
+Ref.
+
+Ref.
 
 \end{poem}
 
