--- a/songbook.tex
+++ b/songbook.tex
@@ -2960,6 +2960,94 @@ Still I don’t believe in angels
 
 \end{poem}
 
+\begin{poem}{Leeds United}{Amanda Palmerová}
+
+\settowidth{\versewidth}{He’s free to tread and lift the sheets}
+
+We watch you\\*
+your expert double X's,\\*
+it's just like you\\*
+to paint those whiter fences.
+
+It's so polite, it's so polite,\\*
+It's offensive, it's offensive,\\*
+It's so unright, it's so unright,\\*
+It's a technical, accept it.
+
+But who needs love when there's Law and Order\\*
+and who needs love when there's Southern Comfort\\*
+and who needs love at all.
+
+We stalk you\\*
+your expert double X's,\\*
+we oxidize you in your sleep,\\*
+there's no exit, there's no exit.
+
+You're on a roll, you're on a roll,\\*
+no one gets it, no one gets it,\\*
+your honor, no, your honor,\\*
+can't you protect us, protect us.
+
+But who needs love when there's Law and Order\\*
+and who needs love when there's Southern Comfort\\*
+and who needs love\\*
+when the sandwiches are wicked\\*
+and they know you at the Mac store.
+
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+I'm so excited\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+The blacks and beat kids\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+Oh I'm getting frightened\\*
+Uh uh uh uh uh uh uh uh\\*
+Someday, someday, Leeds United
+
+Bugsy Malone came to carry you home\\*
+and they're taking you all to the doctor.\\*
+Burberry vices, all sugary spices,\\*
+It's nice but it's not what I'm after.
+
+Sure, I admire you, sure, you inspire me,\\*
+but you've been not getting back so\\*
+I'll wait at the Sainbury's\\*
+Countin' my change making bank on the upcoming roster.
+
+And we'll stop you\\*
+your expert double X's,\\*
+oh yeah, a big stock holder\\*
+extra cold with two X's.
+
+That never talking thing you do\\*
+is effective, it's effective.\\*
+Your shoulder's icy colder, oh\\*
+than a death wish, than a death wish.
+
+But who needs love when there's Law and Order\\*
+and who needs love when there's Dukes of Hazard\\*
+and who needs love\\*
+when the sandwiches are wicked\\*
+and they know you at the Mac store.
+
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+I'm so excited\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+The blacks and beat kids\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+They're so excited\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+When I think about Leeds United\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+I'm getting frightened\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+The blacks, the blacks, the blacks, and beat kids\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+It's so exciting\\*
+Uh uh uh uh oh oh oh oh oh uh oh\\*
+Someday, someday, someday, someday, someday, \mbox{someday}
+
+\end{poem}
+
 \begin{poem}{Old Maui}{lidová}
 
 \settowidth{\versewidth}{Cause we're homeward bound from the Arctic ground}
