--- a/songbook.tex
+++ b/songbook.tex
@@ -2090,6 +2090,45 @@ na vlnách chtíče.
 
 \end{poem}
 
+\begin{poem}{Tereza}{Jiří Suchý, Jiří Šlitr}
+
+\settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
+
+Ten den, co vítr listí z města svál, \\*
+můj džíp se vracel, jako by se bál, \\*
+že asfaltový moře odliv má \\*
+a stáj že svýho koně nepozná. 
+
+Ref.:\\*
+Řekni, kolik je na světě, kolik je takovejch měst, \\*
+řekni, kdo by se vracel, všude je tisíce cest, \\*
+tenkrát, když jsi mi, Terezo, řekla, že ráda mě máš, \\*
+tenkrát ptal jsem se, Terezo, kolik mi polibků dáš,\\*
+naposled, naposled. 
+
+Já z dálky viděl město v slunci stát \\*
+a dál jsem se jen s hrůzou mohl ptát, \\*
+proč vítr mlátí spoustou okenic, \\*
+proč jsou v ulici auta, jinak nic?
+
+Ref.
+
+Do prázdnejch beden z otvíranejch aut \\*
+zaznívá odněkud něžný tón flaut \\*
+a v závěji starýho papíru \\*
+válej' se černý klapky z klavíru. 
+
+Ref.
+
+Tak bloudím tímhle strašným městem sám \\*
+a vím, že Terezu už nepotkám, \\*
+jen já tu zůstal s prázdnou ulicí\\* 
+a osamělý město mlčící. 
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Tři čuníci}{Jaromír Nohavica}
 
 \settowidth{\versewidth}{vyšli prostě do světa a vesele si zpívají:}
