--- a/songbook.tex
+++ b/songbook.tex
@@ -3211,6 +3211,88 @@ Oh why, oh why can't I?
 
 \end{poem}
 
+\begin{poem}{Rats Rule}{Die Antwoord}
+
+\settowidth{\versewidth}{Soon, there could be a couple billion, how will you make us go away?}
+
+Rats, rats, everywhere you look,\\*
+everywhere you turn, there's rats,\\*
+rats, rats, eating all your books,\\*
+looking at your photographs.
+
+Rats, rats, nesting in your closets,\\*
+hiding underneath your socks,\\*
+living in your living rooms,\\*
+sleeping by your bedroom clocks.
+
+There must be a couple million\\*
+and more are coming every day,\\*
+soon, there could be a couple billion,\\*
+how will you make us go away?
+
+Ew, those dirty rats, they're ruining everything! There must be some way to get rid of them! Ew, kill them with poison!\\*
+\textit{Fuck, shut up, bitch! Hou jou bek, we're going to fuck you up!\\*
+Fok alle kak rappers!}
+
+Yo, yo, we back with the R to the A to the T,\\*
+to the T to the R to the A to the P,\\*
+when the rats wanna rap, they say,\\*
+\textit{Yo, gimme that rat trap! Rat trap!} Say it again.\\*
+\textit{Yo, gimme that rat trap!}
+
+\textit{I'm a bad rat, not a good rat,\\*
+you catch me hanging with hood rats,\\*
+but actually, you never catch me,\\*
+'cause I'm a fast rat, I'm a fast rat.\\*
+My accent is fucking mad bent,\\*
+I'm happenin', you a has-been,\\*
+don't want me 'round when I snap back,\\*
+don't point at me, I'm an attack rat.}\\*
+I'm the dap strap, motherfuckin' matte rat,\\*
+Yolandi's the black rat in the rat pack,\\*
+you spitting, you fat rap,\\*
+we're rolling with Jack Black.\\*
+When the rap stap, the people go clap-clap,\\*
+the club always jam packed,\\*
+little sex rats, you wanna get backstage,\\*
+to hang with the Zef rats?\\*
+Little white rats, little black rats,\\*
+oh, fuck, what a dope butt, let me smack that,\\*
+she giggly, wriggly, why? 'Cause I'm sniffing her ass crack,\\*
+Yo, I'd tap that.\\*
+\textit{Yo, give me the mic or I snatch that,\\*
+stab you in the back if you act whack,\\*
+I'm a mad rat with a black gat,\\*
+where the cash at?}\\*
+Got a fat sack, weed in my backpack.\\*
+\textit{Motherfucker, yo, that's sick, slap my hand!}\\*
+Wanna get high, man? I wanna get spastic,\\*
+aye, Yo, that shit's fuckin' rap shit,\\*
+rap shit, get that bat, shit,\\*
+Yo, that shit's fuckin' batshit crazy.\\*
+Rats rap over trap tracks,\\*
+you got that track, fucking rat trap,\\*
+we got next shit! She 'bout to get hectic,\\*
+when we killing the fat cats making whack rap.
+
+Die, fuck! Motherfucker! That stupid fuck!\\*
+\textit{No! Cut it out! They're in my ass, there’s a rat in my ass! There’s a rat in my ass, oh, my God!}
+
+Rats are all that you can think of,\\*
+the only thing that you discuss,\\*
+you can try and find a rat solution,\\*
+but you'll never get rid of us.
+
+Rats, rats, you think that we're disgusting,\\*
+but actually we're really cool,\\*
+us rats started in the gutter,\\*
+but in the end, the rats shall rule.
+
+In the end, the rats shall rule.\\*
+\textit{Yeah, rats rule, motherfucker.}
+
+\end{poem}
+
 \begin{poem}{Ring of Fire}{Johnny Cash}
 
 \settowidth{\versewidth}{I fell into a burnin' ring of fire}
