insert Svetlana's songs

--- a/songbook.tex
+++ b/songbook.tex
@@ -880,6 +880,25 @@ Ref.
 
 \end{poem}
 
+\begin{poem}{Houby}{Garáž}
+
+\settowidth{\versewidth}{Člověk ze zoufalství snadno pomate se}
+
+Člověk ze zoufalství snadno pomate se\\*
+muchomůrky bílé budu sbírat v lese\\*
+o-o-ó-ó
+
+Muchomůrky bílé - bělejší než sněhy\\*
+sním je k ukojení své potřeby něhy\\*
+o-o-ó-ó
+
+Neprocitnu tady - až na jiným světě\\*
+muchomůrky bílé budu sbírat v létě\\*
+o-o-ó-ó - muchomůrky bílé\\*
+o-o-ó-ó - muchomůrky bílé 
+
+\end{poem}
+
 \begin{poem}{Hvězda na vrbě}{Karel Mareš, Jiří Štaidl}
 
 \settowidth{\versewidth}{Viděli jsme jednou v lukách}
@@ -1661,6 +1680,167 @@ Ref.
 
 \end{poem}
 
+\begin{poem}{Nad stádem koní}{Buty}
+
+\settowidth{\versewidth}{a o všech lidech, co kdy žili na téhle planetě.}
+
+Nad stádem koní\\*
+podkovy zvoní, zvoní,\\*
+Černý vůz vlečou,\\*
+a slzy tečou\\*
+a Já volám...
+
+Tak neplač můj kamaráde,\\*
+Náhoda je blbec, když krade,\\*
+Je tuhý jak veka,\\*
+a řeka ho splaví,\\*
+Máme ho rádi
+
+No tak co, tak co, tak co....
+
+Vždycky si přál,\\*
+až bude popel,\\*
+i s kytarou,\\*
+vodou ať plavou,\\*
+jen žádný hotel,\\*
+s křížkem nad hlavou,
+
+Až najdeš místo,\\*
+kde je ten pramen,\\*
+a kámen, co praská,\\*
+budeš mít jisto,\\*
+patří sem popel,\\*
+a každá láska,
+
+No tak co, tak co, tak co...
+
+Nad stádem koní,\\*
+podkovy zvoní, zvoní,\\*
+Černý vůz vlečou,\\*
+a slzy tečou\\*
+A já šeptám...
+
+Vysyp ten popel kamaráde,\\*
+do bílé vody, vody,\\*
+Vyhasnul kotel,\\*
+a náhoda je,\\*
+štěstí od podkovy,\\*
+heja heja hej
+
+Vysyp ten popel kamaráde,\\*
+do bílé vody, vody,\\*
+Vyhasnul kotel,\\*
+a náhoda je,\\*
+štěstí od podkovy.
+
+Vysyp ten popel kamaráde,\\*
+do bílé vody, vody,\\*
+Vyhasnul kotel,\\*
+a náhoda je,\\*
+štěstí od podkovy,
+
+Vysyp ten popel kamaráde,\\*
+do bílé vody, vody,\\*
+Vyhasnul kotel,\\*
+a náhoda je,\\*
+štěstí od podkovy...
+
+\end{poem}
+
+\begin{poem}{Není nutno}{Jaroslav Uhlíř, Zdeněk Svěrák}
+
+\settowidth{\versewidth}{Chceš-li, trap se, že ti v kapse}
+
+Není nutno, není nutno,\\*
+aby bylo přímo veselo,\\*
+hlavně nesmí býti smutno,\\*
+natož aby se brečelo.
+
+Chceš-li, trap se, že ti v kapse\\*
+zlaté mince nechřestí,\\*
+nemít žádné kamarády,\\*
+tomu já říkám neštěstí.
+
+Nemít prachy - nevadí,\\*
+nemít srdce - vadí,\\*
+zažít krachy - nevadí,\\*
+zažít nudu - jó to vadí, to vadí.
+
+Není nutno, není nutno,\\*
+aby bylo přímo veselo,\\*
+hlavně nesmí býti smutno,\\*
+natož aby se brečelo.
+
+Není nutno, není nutno,\\*
+aby bylo přímo veselo,\\*
+hlavně nesmí býti smutno,\\*
+natož aby se brečelo.
+
+\end{poem}
+
+\begin{poem}{Nikdy nic nebylo}{Sto zvířat}
+
+\settowidth{\versewidth}{Člověk ze zoufalství snadno pomate se}
+
+nikdy jsi nebyla\\*
+a naše seznámení\\*
+proběhlo má milá\\*
+před kinem, který není\\*
+nepil jsem tequilu\\*
+a ne, že bych se šklebil\\*
+netlačil na pilu\\*
+v tom baru, kterej nebyl
+
+nikdy jsem neříkal\\*
+kolik mě čeká slávy\\*
+nehrála muzika\\*
+ze který jsem se dávil\\*
+nechtěl jsem na závěr\\*
+ti vyblejt celej život\\*
+a ztratit charakter\\*
+a všechno oběživo
+
+Ref.:\\*
+/:nebylo nic\\*
+já jen kdybys měla chvíli\\*
+můžem si někam sednout\\*
+nebylo nic\\*
+pár let jsme spolu nemluvili\\*
+a předtím taky ani jednou:/
+
+nikdy nic nebylo\\*
+noc jako horská dráha\\*
+vsadím se o kilo\\*
+že prostě nejsi, drahá\\*
+je to jen chiméra\\*
+a žádný, že jsem brečel\\*
+a měl jsem hysterák\\*
+už mi neutečeš
+
+scénář se nekoná\\*
+my dva ho nenapsali\\*
+a někdo místo nás\\*
+prázdnej papír spálil\\*
+nic není, ani já\\*
+ani tvý zlatý oči\\*
+jen jsme šli na biják\\*
+co nikdo nenatočil
+
+Ref.
+
+nikdy jsi nebyla\\*
+a naše seznámení\\*
+proběhlo má milá\\*
+před kinem, který není\\*
+nic není, ani já\\*
+ani tvý zlatý oči\\*
+jen jsme šli na biják\\*
+co nikdo nenatočil
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Obluda}{Hop Trop}
 
 \settowidth{\versewidth}{křik' plavčík na stožáru, a hlásek se mu třás'}
@@ -1947,6 +2127,36 @@ A ty musíš býti má, lebo mi tě pán Bůh dá.
 
 \end{poem}
 
+\begin{poem}{Ptáčata}{Brontosauři}
+
+\settowidth{\versewidth}{Chceš-li, trap se, že ti v kapse}
+
+Na kolejích stála za uchem květ\\*
+Vlasy trávou zavázaný\\*
+S kytarou na zádech strun už jen pět\\*
+Hezký voči uplakaný
+
+Opuštěnejch ptáčat plnej je svět\\*
+Hnízda hledaj neví co dál\\*
+Vyšlápli jsme ránem a v neděli zpět\\*
+Za tejden jsem u trati stál
+
+víš holky těžší to maj, víš holky těžší to maj
+
+Říkal jsem jí štístko zatoulaný\\*
+Vždycky smála se a začala hrát\\*
+O potocích v trávě a o znamení\\*
+Co lidi uměj ze zloby dát
+
+víš holky těžší to maj, víš holky těžší to maj
+
+Na kolejích stála za uchem květ\\*
+Vlasy trávou zavázaný\\*
+S kytarou na zádech strun už jen pět\\*
+Hezký voči uplakaný
+
+\end{poem}
+
 \begin{poem}{Severní vítr}{Zdeněk Svěrák, Jaroslav Uhlíř}
 
 \settowidth{\versewidth}{svůj hrob, a že stloukám si kříž.}
@@ -2126,6 +2336,59 @@ jen já tu zůstal s prázdnou ulicí\\*
 a osamělý město mlčící. 
 
 Ref.
+
+\end{poem}
+
+\begin{poem}{Traktor}{Visací zámek}
+
+\settowidth{\versewidth}{Sám s hlavou skloněnou, všechny lásky budou zdání.}
+
+Jede traktor je to Zetor\\*
+Jede do hor orat brambor
+
+Jede traktor je to Zetor\\*
+Jede do hor orat brambor
+
+Zemědělci brambor zasejí\\*
+Potom pohnojí pak zas vyrejí\\*
+Mládenec si kapsu namastí\\*
+Prachama zachrastí\\*
+Na děvu povětrnou
+
+Kriminalita kriminalita kriminalita mládeže\\*
+Kriminalita kriminalita kriminalita mládeže.
+
+JeZeĎák a děvka spolu jdou\\*
+Před novou hospodou hrozně se radujou\\*
+Nejdřív se tu spolu opijem\\*
+Tvou ženu zabijem\\*
+A děti ubijem
+
+Kriminalita kriminalita kriminalita mládeže\\*
+Kriminalita kriminalita kriminalita mládeže
+
+JeZeĎák se hrozně opije\\*
+Svou ženu zabije a pak se poblije\\*
+Za rady moc děvce děkuje\\*
+a pak ji prokleje vidlema vod hnoje
+
+Kriminalita kriminalita kriminalita mládeže\\*
+Kriminalita kriminalita kriminalita mládeže
+
+Jede traktor je to Zetor\\*
+Jede do hor orat brambor
+
+Jede traktor je to Zetor\\*
+Jede do hor orat brambor
+
+Jede traktor (jede traktor)\\*
+Je to Zetor (je to Zetor)\\*
+Jede do hor (jede do hor)\\*
+Vorat brambor (vorat brambor)
+
+Jede traktor (jede traktor)\\*
+Jede do hor (jede do hor)\\*
+Vorat brambóóór!
 
 \end{poem}
 
