add Tango Till They're Sore

--- a/songbook.tex
+++ b/songbook.tex
@@ -3739,6 +3739,8 @@ And there’s no tellin' who that it’s namin'\\*
 For the loser now will be later to win\\*
 For the times they are a-changin'.
 
+\vfill\eject
+
 Come mothers and fathers\\*
 Throughout the land\\*
 And don’t criticize\\*
@@ -3748,8 +3750,6 @@ Are beyond your command\\*
 Your old road is rapidly agein'\\*
 Please get outta' the new one if you can’t lend your hand\\*
 For the times they are a-changin'.
-
-\vfill\eject
 
 Come senators, congressmen\\*
 Please heed the call\\*
@@ -3770,6 +3770,39 @@ Will later be past\\*
 The order is rapidly fading\\*
 And the first one now will later be last\\*
 For the times they are a-changin'.
+
+\end{poem}
+
+\begin{poem}{Tango Till They're Sore}{Tom Waits}
+
+\settowidth{\versewidth}{Make sure they play my theme song I guess daisies will have to do}
+
+Well you play that tarantella all the hounds will start to roar\\*
+The boys all go to hell and then the Cubans hit the floor\\*
+They drive along the pipeline, they tango 'til they're sore\\*
+They take apart their nightmares and they leave them by the door
+
+Let me fall out of the window with confetti in my hair\\*
+Deal out Jacks or Better on a blanket by the stairs\\*
+I'll tell you all my secrets, but I lie about my past\\*
+And send me off to bed for evermore
+
+Ref.:\\*
+Make sure they play my theme song I guess daisies will have to do\\*
+Just get me to New Orleans and paint shadows on the pews\\*
+Turn the spit on that pig and kick the drum and let me down\\*
+Put my clarinet beneath your bed 'til I get back in town
+
+Ref.
+
+Just make sure she's all in calico and the color of a doll\\*
+Wave the flag on Cadillac day, and a skillet on the wall\\*
+Cut me a switch or hold your breath 'til the sun goes down\\*
+Write my name on the hood, send me off to another town
+
+Ref.
+
+Ref.
 
 \end{poem}
 
